# CRUD-application

./: Dockerfile  app.py  main.py  pyproject.toml
Pages/: consult.py  main_menu.py
models/: foods.py
pages/: main_menu.py
services/: crud.py
