[tool.poetry]
name = "crud-application"
version = "0.1.0"
description = ""
authors = ["m-dougl <douglas.maia.santos@itec.ufpa.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.34.0"
black = "^24.4.2"
pyodbc = "^5.1.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
